--- a/public/assets/config/appsettings.json
+++ b/public/assets/config/appsettings.json
@@ -1,8 +1,7 @@
 {
-  "sessionName": "Qsmart2",
-  "sessionTime": 11,
-  "showMessagecode": true,
-  "autoRefresing": true,
-  "autoRefreshTime": 5,
-  "tokenServingInterval": 60
+  "sessionName": "Q2KIOSK",
+  "sessionReset": 120,
+  "intervalCall": 60,
+  "showMessageTime": 10,
+  "dateTimeInterval": 10
 }
