--- a/public/assets/config/appsettings.json
+++ b/public/assets/config/appsettings.json
@@ -3,5 +3,7 @@
   "sessionReset": 120,
   "intervalCall": 60,
   "showMessageTime": 10,
-  "dateTimeInterval": 10
+  "dateTimeInterval": 10,
+  "readerUrl": "http://192.168.7.156:8000/reader",
+  "readerRetriveInterval": 3
 }
